@@ -1,3 +1,8 @@
+2001-05-05  Karl Eichwalder  <ke@suse.de>
+
+	* xgettext.c (read_name_from_file): Remove trailing space from line.
+	* msgcomm.c (read_name_from_file): Likewise.
+
 2001-05-02  Bruno Haible  <haible@clisp.cons.org>
 
 	* po-charset.c: Don't include stdio.h, stdlib.h, mbswidth.h. Include
